# pine_pass

./: .gitignore  Makefile  README.md  entry.py  pinepass.desktop  pyproject.toml  setup.cfg  ui.css  ui.glade
pine_pass/: __init__.py  indexer.py
pine_pass/gui/: __init__.py  __main__.py  app.py  background.py  dialogs.py  main_window.py  ui.glade  widgets.py
pine_pass/gui/ui_definitions/: main_window.ui  password_edit_dialog.ui  prefs_dialog.ui  ui.gresource  ui.gresource.xml
pine_pass_gui/: app.py
