[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.scripts]
pine_pass = "pine_pass.gui"

[tool.flit.metadata]
module = "pine_pass"
author = "Micah Nordland"
author-email = "micah-pinepass@rehack.me"
home-page = "https://rehack.me"
classifiers = [ "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",]

