[metadata]
name = pine_pass
version = 1.0.0
description = 'GUI for password-store written with Python and GTK',
author = 'Micah Nordland'
author_email = 'micah-pinepass@rehack.me',
url = 'https://rehack.me'
license = GPLv3+
classifiers = 
      "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"

[options]
packages = pine_pass, pine_pass.gui
include_package_data = True

[options.package_data]
pine_pass.gui: *.gresource



[options.entry_points]
console_scripts = 
      pinepass = pine_pass.gui:start_app

[options.data_files]
share/applications = pinepass.desktop
